# agent-markdown

./: .gitignore  AMD.md  DELIVERY.md  LICENSE  README.md  markdown-agent-edit-design.md
amd-v0.1.0/amd/: README.md  pyproject.toml
amd-v0.1.0/amd/amd/: __init__.py  cli.py  convert.py  lock.py  operations.py  parser.py  patch.py  query.py  schema.py
amd-v0.1.0/amd/examples/: adam-concept.amd.md  adam-paper.amd.md  plain-readme.md
amd-v0.1.0/amd/schemas/: concept-page.yaml  source-page.yaml
amd-v0.1.0/amd/tests/: smoke_test.py
mdtool/: README.md  adam-notes.md  mdtool.py  test.md
